--- a/style.css
+++ b/style.css
@@ -1,40 +1,30 @@
+
+/* meadia-quaries */
+/* mobie view */
+
+
+
+
+
+
 /* header style  */
 .header{
-    margin-left: 120px;
-    margin-right: 120px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
 }
-nav {
-    display: flex;
-    justify-content: space-between;
+.headline{
     font-size: 24px;
-    
 }
 .anchor a{
-    padding-left: 34px;
+    padding-right: 34px;
     font-size: 16px;
     text-decoration: none;
     color: black;
-    position: relative;
-    left: 100px;
     
 }
-.menu{
-    position: relative;
-    top: 88px;
-    right: 50px;
-    font-size: 20px;
-}
-.anchor{
-    margin-top: 85px;
-}
-#cart{
-    padding-left: 34px;
+.menu a{
+    padding-right: 34px;
     font-size: 16px;
     text-decoration: none;
     color: black;
-    margin-top: 95px;
-}
-
-.headline{
-    margin-top: 102px;
 }
